# BOT

./: .env.example  .gitignore  README.md  docker-compose.local.yml  frontend-smoke.out  package-lock.json  package.json  railway.json  tsconfig.base.json  tsconfig.json  tsconfig.web.json
abi/: contract.json
apps/backend/: backend-smoke.err  backend-smoke.out  package.json  railway.json  tsconfig.json  tsconfig.tsbuildinfo
apps/backend/scripts/: copy-assets.mjs
apps/backend/src/: app.module.ts  infrastructure.module.ts  main.ts
apps/backend/src/auth/: admin-token.guard.ts  auth.utils.ts
apps/backend/src/config/: app-config.service.ts
apps/frontend/: next.config.mjs  package.json  railway.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
apps/frontend/lib/: api.ts  auth-core.ts  auth.ts  dashboard-session.ts  defaults.ts  format.ts
apps/rust-executor/: Cargo.toml  README.md
apps/rust-executor/src/: config.rs  executor.rs  main.rs  models.rs  redis_bridge.rs
scripts/: local-doctor.mjs  local-prod.mjs  local-verify.mjs  validate.js  validate.ts
src/: bot.js  bot.ts  claims.ts  config.js  dashboard-server.js  dashboard-server.ts  database.js  index.js  index.ts  integrations.js  integrations.ts  mint-automation.js  mint-source-adapters.js  mint-sources.js  mint-sources.ts  queue.js  queue.ts  security.ts  server.js  start.js  start.ts  worker.js  worker.ts
test/: smoke.test.js  smoke.test.mjs  smoke.test.ts
web/: app.js  app.ts  index.html  styles.css
(+76 files in other folders)
