[package]
name = "mintbot-rust-executor"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Latency-critical Rust execution worker for MintBot"

[dependencies]
anyhow = "1.0"
ethers = { version = "2.0.14", features = ["rustls", "ws"] }
ethers-flashbots = "0.15.0"
redis = { version = "0.27.5", features = ["aio", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
